--- a/src/Components/Standart/Button/Button.module.css
+++ b/src/Components/Standart/Button/Button.module.css
@@ -11,4 +11,18 @@
     font-weight: 500;
     line-height: 30px;
     backdrop-filter: blur(5px);
+    transition: all 0.3s ease-in-out;
+}
+
+.Button:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+.Button svg path{
+    transition: all 0.3s ease-in-out;
+}
+
+.Button:hover svg path{
+    fill: #000;
 }
