--- a/src/Components/Blocks/EventBlock/EventBlock.module.css
+++ b/src/Components/Blocks/EventBlock/EventBlock.module.css
@@ -1,4 +1,4 @@
-.EventBlock{
+.EventBlock {
     display: flex;
     flex-direction: column;
     width: 33.3%;
@@ -9,14 +9,14 @@
     position: relative;
 }
 
-.EventBlock_title{
+.EventBlock_title {
     font-size: 40px;
     font-weight: 600;
     line-height: 49px;
     letter-spacing: 0em;
 }
 
-.EventBlock_body{
+.EventBlock_body {
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -29,6 +29,22 @@
     left: 0;
 }
 
-.EventBlock_img img{
+.EventBlock_img img {
     width: 100%;
+}
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+    .EventBlock {
+        width: 100% !important;
+        height: 300px !important;
+        padding: 10px 20px !important;
+    }
+
+    .EventBlock_title {
+        font-size: 24px !important;
+    }
+
+    .EventBlock_body {
+        font-size: 16px !important;
+    }
 }
