--- a/src/Components/Blocks/Header/Header.module.css
+++ b/src/Components/Blocks/Header/Header.module.css
@@ -18,3 +18,9 @@
 .Header ul a{
     color: #fff;
 }
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+    .Header{
+        display: none;
+    }
+}
