--- a/src/Components/Standart/RowBlock/RowBlock.module.css
+++ b/src/Components/Standart/RowBlock/RowBlock.module.css
@@ -2,3 +2,12 @@
     display: flex;
     align-items: center;
 }
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+    .RowBlock{
+        width: 100% !important;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px !important;
+    }
+}
