--- a/src/Components/Standart/Text/Text.module.css
+++ b/src/Components/Standart/Text/Text.module.css
@@ -1,7 +1,13 @@
 .Text {
     font-size: 20px;
     font-weight: 500;
-    line-height: 30px;
     letter-spacing: 0em;
     text-align: center;
+}
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+    .Text{
+        width: 100% !important;
+        font-size: 16px !important;
+    }
 }
