--- a/src/Components/Blocks/EventBlock/EventBlock.module.css
+++ b/src/Components/Blocks/EventBlock/EventBlock.module.css
@@ -29,14 +29,34 @@
     left: 0;
 }
 
+.EventBlock_img__full {
+    width: 100%;
+    height: calc(100% - 80px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.EventBlock_img__full img {
+    width: auto;
+    height: 80%;
+}
+
 .EventBlock_img img {
     width: 100%;
+}
+
+.EventBlock__gapBlock{
+    height: calc(100% - 85px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 @media screen and (min-width: 320px) and (max-width: 425px) {
     .EventBlock {
         width: 100% !important;
-        height: 300px !important;
+        height: 350px !important;
         padding: 10px 20px !important;
     }
 
