--- a/src/Components/Standart/Button/Button.module.css
+++ b/src/Components/Standart/Button/Button.module.css
@@ -7,16 +7,15 @@
     border-radius: 20px;
     color: #FFFFFF;
     gap: 20px;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
-    line-height: 30px;
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
 }
 
 .Button:hover{
     background-color: #fff;
-    color: #000;
+    color: #000 !important;
 }
 
 .Button svg path{
