--- a/src/Components/Blocks/Chat/Chat.module.css
+++ b/src/Components/Blocks/Chat/Chat.module.css
@@ -15,7 +15,8 @@
 
 .messBlock {
     width: 100%;
-    height: 200px;
-    border: 2px solid red;
     margin-bottom: 20px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
 }
