--- a/src/Components/Blocks/Chat/Chat.module.css
+++ b/src/Components/Blocks/Chat/Chat.module.css
@@ -1,10 +1,11 @@
 .fullWidthChatBlock{
     width: 100%;
-    height: 100vh;
+    height: 65vh;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px 20px 70px 20px;
+    margin-top: -33px;
 }
 
 .Chat {
@@ -74,5 +75,10 @@
     }
     .chat_date{
         font-size: 14px;
+    }
+
+    .textPositionChat input{
+        height: 40px !important;
+        font-size: 14px !important;
     }
 }
