--- a/src/Components/Blocks/Chat/Chat.module.css
+++ b/src/Components/Blocks/Chat/Chat.module.css
@@ -1,6 +1,6 @@
 .fullWidthChatBlock{
     width: 100%;
-    height: 65vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +39,7 @@
 }
 
 .chat_text{
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
@@ -61,6 +61,8 @@
 @media screen and (min-width: 320px) and (max-width: 768px) {
     .fullWidthChatBlock{
         padding: 10px 10px 10px 10px;
+        height: 65vh !important;
+        background-size: contain !important;
     }
     .textPositionChat{
         bottom: 10px;
@@ -68,17 +70,21 @@
         width: calc(100% - 20px);;
     }
     .chat_text{
-        font-size: 20px;
+        font-size: 16px;
     }
     .chat_fio{
-        font-size: 14px;
+        font-size: 12px;
     }
     .chat_date{
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .textPositionChat input{
         height: 40px !important;
         font-size: 14px !important;
+    }
+    .messBlock{
+        gap: 10px;
+        margin-bottom: 10px;
     }
 }
